# nkust-crawler-25-ptt-crawler

./: README.md  example.py  main.py  pyproject.toml
src/ptt_scraper/: __init__.py  crawler.py  database.py  main.py  models.py  scrapers.py
tests/: __init__.py  test_crawler.py  test_database.py  test_models.py
